--- a/login/login.html
+++ b/login/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>NAFDAC Online Drug Verification System - Login</title>
-  <link rel="icon" href="img/logo.png" type="image/gif">
+  <link rel="icon" href="img/logo.png" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Include necessary meta tags, CSS files, and Google Fonts from home.html -->
   <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
@@ -11,26 +11,81 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Montserrat:300,400,500,600,700" rel="stylesheet">
   <!-- Additional styles -->
   <style>
-    
     body {
-      background-color: #ffffff;
+      background-color: #f4f7f9;
+      font-family: 'Open Sans', sans-serif;
     }
-    .screen {
-      position: relative;
-      height: 100vh;
+    .container {
       display: flex;
       justify-content: center;
       align-items: center;
+      height: 100vh;
+    }
+    .screen {
+      position: relative;
+      width: 100%;
+      max-width: 500px;
+      background: #ffffff;
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
     }
     .screen__content {
-      position: relative;
-      z-index: 1;
-      max-width: 600px;
-      padding: 20px;
-      background: rgba(255, 255, 255, 0.8); 
-      border-radius: 10px;
       text-align: center;
-      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1); /* Optional: Add box-shadow for depth */
+    }
+    .login__field {
+      margin-bottom: 20px;
+      position: relative;
+    }
+    .login__icon {
+      position: absolute;
+      top: 50%;
+      left: 15px;
+      transform: translateY(-50%);
+      color: #6c757d;
+    }
+    .login__input {
+      border: 1px solid #ced4da;
+      border-radius: 4px;
+      padding: 10px 15px;
+      padding-left: 40px;
+      font-size: 16px;
+      width: 100%;
+      transition: border-color 0.2s ease;
+    }
+    .login__input:focus {
+      border-color: #007bff;
+      outline: none;
+    }
+    .login__submit {
+      background: #007bff;
+      color: #ffffff;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 4px;
+      font-size: 16px;
+      font-weight: 700;
+      cursor: pointer;
+      transition: background-color 0.2s ease;
+    }
+    .login__submit:hover {
+      background-color: #0056b3;
+    }
+    .social-login {
+      margin-top: 20px;
+    }
+    .social-icons {
+      display: flex;
+      justify-content: center;
+    }
+    .social-login__icon {
+      font-size: 20px;
+      color: #007bff;
+      margin: 0 10px;
+      text-decoration: none;
+    }
+    .social-login__icon:hover {
+      color: #0056b3;
     }
     .screen__background {
       position: absolute;
@@ -38,16 +93,14 @@
       left: 0;
       width: 100%;
       height: 100%;
-      display: flex;
-      justify-content: center;
-	  background-color: #ffffff;
-      align-items: center;
+      overflow: hidden;
+      z-index: -1;
     }
     .screen__background__shape {
       position: absolute;
       width: 200px;
       height: 200px;
-      background-color: rgba(255, 255, 255, 0.05); /* Adjust opacity and color to match your design */
+      background-color: rgba(0, 123, 255, 0.1);
       border-radius: 50%;
       transition: transform 2s ease-in-out;
     }
@@ -71,14 +124,38 @@
       left: 90%;
       transform: translate(-50%, -50%) rotate(0deg);
     }
+    /* Top links styles */
+    .top-links {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      z-index: 10;
+    }
+    .top-links a {
+      color: #007bff;
+      font-size: 16px;
+      margin-left: 15px;
+      text-decoration: none;
+    }
+    .top-links a:hover {
+      color: #0056b3;
+    }
   </style>
 </head>
 <body>
-  <!-- ======= Header ======= -->
   <header id="header" class="fixed-top header-transparent">
-    <!-- Header content from home.html -->
-  </header><!-- End Header -->
-
+    <div class="container d-flex align-items-center">
+      <nav class="main-nav d-none d-lg-block dark">
+        <ul>
+          <li><a href="drug-verification.php">VERIFY DRUG</a></li>
+          <li><a href="index.php">HOME</a></li>
+          <li class="active"><a href="login/login.php">LOGIN</a></li>
+          <li><a href="report.php">REPORT DRUG</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  
   <!-- Main content -->
   <div class="container">
     <div class="screen">
@@ -92,20 +169,20 @@
             <i class="login__icon fa fa-lock"></i>
             <input type="password" class="login__input" placeholder="Password" name="password" required>
           </div>
-          <button class="button login__submit" type="submit">
-            <span class="button__text">Log In Now</span>
-            <i class="button__icon fa fa-chevron-right"></i>
+          <button class="login__submit" type="submit">
+            Log In Now
           </button>
         </form>
         <div class="social-login">
           <h3>Login via</h3>
           <div class="social-icons">
-            <!-- Social login icons -->
+            <a href="#" class="social-login__icon fa fa-facebook"></a>
+            <a href="#" class="social-login__icon fa fa-twitter"></a>
+            <a href="#" class="social-login__icon fa fa-google"></a>
           </div>
         </div>
       </div>
       <div class="screen__background">
-        <!-- Background shapes -->
         <span class="screen__background__shape screen__background__shape4"></span>
         <span class="screen__background__shape screen__background__shape3"></span>		
         <span class="screen__background__shape screen__background__shape2"></span>
@@ -117,6 +194,5 @@
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <!-- Additional scripts -->
 </body>
 </html>
